--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ html {
 .main-main {
   max-width: 600px;
   background: #fbfbfb;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .main-header {
@@ -45,12 +47,50 @@ html {
   background-color: hotpink;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.interface-text {
+  background-color: ;
+  margin: 0;
+}
+
+.interface-search {
+  background-color: aqua;
+  position: relative;
+  width: 328px;
+}
+
+.searchbar {
+  border: 1.75px solid #6a1cc3;
+  border-radius: 2px;
+  position: relative;
+}
+
+.searchbar-logo {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  color: ##e5e5e5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
 }
 
 .dropdown-classes {
 }
 
 .dropdown-time-model {
+}
+
+.interface-dropdown {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
 }
 
 #classes-select,
@@ -82,6 +122,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  pointer-events: none;
 }
 
 .info-section {
