--- a/style.css
+++ b/style.css
@@ -62,10 +62,10 @@ html {
   width: 328px;
 }
 
-.searchbar {
+#search {
   border: 1.75px solid #6a1cc3;
   border-radius: 2px;
-  position: relative;
+  width: 100%;
 }
 
 .searchbar-logo {
