--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ html {
   color: #fbfbfb;
   font-family: "Montserrat";
   font-style: normal;
+  height: 95px;
+  display: flex;
+  justify-content: center;
 }
 
 .logo-header {
